# hort

./: .dockerignore  .gitignore  .goreleaser.yml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  go.mod  logo-prompts.md
.github/workflows/: ci.yml  docker.yml  release-macos.yml  release.yml
cmd/hort/: main.go
icons/android/values/: ic_launcher_background.xml
internal/cli/: commands.go  daemon.go  daemon_unix.go  daemon_windows.go  help.go  output.go  service.go  service_test.go
internal/daemon/: client.go  daemon_test.go  paths.go  protocol.go  server.go
internal/helptext/: text.go
internal/store/: store.go  store_test.go
internal/vault/: crypto.go  format.go  io.go  lock.go  lock_unix.go  lock_windows.go  session.go  sources.go  sources_test.go  vault.go  vault_test.go
npm/: install.js  package.json  run.js
packaging/: packaging.go
packaging/launchd/: README.md  tech.s16e.hort.daemon.plist.tmpl
packaging/systemd/: README.md  hort-daemon.service.tmpl
scripts/: build-macos-app.sh  build-macos-icns.py  build-macos-signed.sh
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: main.js  style.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: lib.rs  main.rs
