[package]
name = "hort-ui"
version = "0.2.0"
edition = "2021"

[lib]
name = "hort_ui_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
dirs = "5"
